# bing_webmaster_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
bingwm_cli/: __init__.py  auth.py  cli.py  client.py  config.py  dates.py  output.py  paths.py
skills/bing-webmaster-cli/: SKILL.md
tasks/: todo.md
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py
